# rehor

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  OPERATIONS.md  README.md  SETUP.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/skills/: conftest.py
.claude/skills/auto-fork/: README.md  SKILL.md  auto_fork.py  pyproject.toml
.claude/skills/auto-fork/tests/: __init__.py  conftest.py  test_integration.py  test_operations.py
.claude/skills/test-coverage/: README.md  SKILL.md  pyproject.toml
.claude/skills/test-coverage/scripts/: coverage_operations.py
.claude/skills/test-coverage/tests/: test_integration.py  test_operations.py
.github/workflows/: dashboard-tests.yml  ruff-format.yml  test-skills.yml
.tekton/: platform-frontend-ai-dev-memory-server-pull-request.yaml  platform-frontend-ai-dev-memory-server-push.yaml  platform-frontend-ai-dev-proxy-pull-request.yaml  platform-frontend-ai-dev-proxy-push.yaml  platform-frontend-ai-dev-pull-request.yaml  platform-frontend-ai-dev-push.yaml  ruff-format-check-task.yaml
bot/: agent.py  config.py  merge.py  preflight.py  run.py  transcripts.py
bot/tests/: test_jira_sprint_preflight.py  test_multi_profile.py  test_preflight.py
dashboard/: DEVELOPMENT.md  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  api.ts  main.tsx  types.ts  utils.ts
dashboard/tests/: README.md  USAGE.md
deploy/: template.yaml
dev-proxy/: go.mod  go.sum
dev-proxy/rh_identity_transform/: go.mod  go.sum
docs/: bot-workflow-loop.md  onboarding-new-instance.md
memory-server/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  seed_from_json.py
memory-server/bot_memory_server/: api.py  server.py
memory-server/src/: api.py  models.py  schema.sql  server.py
memory-server/tests/: conftest.py  test_costs_and_analytics.py  test_cycle_runs.py  test_cycle_runs_regression.py  test_db_migration.py  (+4 more)
proxy/: Dockerfile  start.sh
tests/: test_cost_tracking_logging.py  test_merge.py  test_transcripts.py
(+68 files in other folders)
