[project]
name = "test-coverage"
version = "0.1.0"
description = "Test coverage evaluation skill for platform-frontend-ai-dev bot"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--strict-config", "--tb=short"]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "**/__pycache__/*", "**/.pytest_cache/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
